Dec 1, 2022: version 4.0.2

    * Fortran: no longer required to build CHOLMOD

Nov 12, 2022: version 4.0.1

    * BLAS definitions: no longer exposed to the user application

Nov 12, 2022: version 4.0.0

    * using CMake build system
    * integers: int (32-bit) and SuiteSparse_long (nominally 64-bit) replaced
        with int32_t and int64_t.
    * cholmod.h: single include file for all Modules
    * BLAS/LAPACK: relying on SuiteSparse_config and CMake to find and link
        with the BLAS and LAPACK libraries
    * libcholmod_cuda.so: CUDA support split into a separate library.
    * OpenMP: CHOLMOD_OMP_NUM_THREADS removed, replaced with run time
        controls (Common->nthreads_max, Common->chunk)
    * METIS: no longer built as a separate libary.  A slightly modified version
        of METIS is embedded into the CHOLMOD library, with a prefix appended
        to each function name so it won't conflict with a standard METIS
        library that may already exist in the application.

June 30, 2020: no change to version number

    * minor update to MATLAB tests: no change to compiled library,
        so version number remains 3.0.14.
    * replaced UFget with ssget in MATLAB tests

Feb 20, 2020: version 3.0.14

    * minor update to cholmod_check to print a matrix

Dec 20, 2018: version 3.0.13

    * bug fix to cholmod_core.h: so that a CUDA include file is properly
        included in a C++ caller; also required for SPQR.

Mar 12, 2018: version 3.0.12

    * bug fix to cholmod_rowcolcounts.c (int overflow was possible)

May 4, 2016: version 3.0.11

    * minor changes to Makefile

Apr 1, 2016: version 3.0.10

    * licensing simplified (no other change); refer to CHOLMOD/Doc/License.txt

Feb 1, 2016: version 3.0.9

    * update to Makefiles
    * minor change to CHOLMOD/Check/cholmod_write.c, when compiling with
	certain modules disabled.
    * more verbose error reporting
    * Demos now compile with MatrixOps module disabled, but they don't