@@ -1,6 +1,12 @@
 Dec 1, 2022: version 4.0.2
 
     * Fortran: no longer required to build CHOLMOD
+    * NPARTITION: if CHOLMOD is compiled with -DNPARTION, then
+        METIS is not compiled.  However, the CHOLMOD interface to METIS is
+        still present; they simply return CHOLMOD_NOT_INSTALLED.  This
+        allows methods that depend on CHOLMOD's METIS interface to use
+        a run-time test, instead of requiring them to be compiled with
+        -DNPARTITION (SPQR in particular).
 
 Nov 12, 2022: version 4.0.1
 
